# worstpractices

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
worstpractices/: __init__.py  cmd.py  packaging.py  requirements.txt  serialize.py  typing.py  util.py
worstpractices/rl/: __init__.py  rainbow.py  requirements.txt  util.py
